Added pca for numerical attributes

--- a/Data Mining Notes.ipynb
+++ b/Data Mining Notes.ipynb
@@ -2037,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2076,7 +2076,7 @@
        " 'termDeposit']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,14 +2089,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2301,7 +2301,7 @@
        "[5 rows x 51 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2326,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2335,7 +2335,7 @@
        "(24233, 51)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2349,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2358,7 +2358,7 @@
        "(array([ True, False,  True, ...,  True, False,  True]), 261, 11936)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2373,7 +2373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2395,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2405,22 +2405,27 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "from sklearn.externals.six import StringIO  \n",
     "from IPython.display import Image  \n",
     "from sklearn.tree import export_graphviz\n",
     "import pydotplus\n",
-    "dot_data = StringIO()\n",
-    "export_graphviz(tree, out_file=dot_data,  \n",
-    "                filled=True, rounded=True,\n",
-    "                special_characters=True)\n",
-    "graph = pydotplus.graph_from_dot_data(dot_data.getvalue())  \n",
-    "Image(graph.create_png())"
+    "\n",
+    "def build_tree(tree):\n",
+    "    dot_data = StringIO()\n",
+    "    export_graphviz(tree, out_file=dot_data,  \n",
+    "                    filled=True, rounded=True,\n",
+    "                    special_characters=True)\n",
+    "    graph = pydotplus.graph_from_dot_data(dot_data.getvalue())  \n",
+    "    return Image(graph.create_png())\n",
+    "\n",
+    "build_tree(tree)"
    ]
   },
   {
@@ -2432,16 +2437,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1a81b9be10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f947a1d9d68>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2470,7 +2475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2485,10 +2490,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1a9e2ab898>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f947a1d9f28>"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2521,93 +2526,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PCA and Variable Selection"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/aware/anaconda3/lib/python3.6/site-packages/sklearn/preprocessing/data.py:625: DataConversionWarning:\n",
-      "\n",
-      "Data with input dtype int64, float64 were all converted to float64 by StandardScaler.\n",
-      "\n",
-      "/home/aware/anaconda3/lib/python3.6/site-packages/sklearn/base.py:462: DataConversionWarning:\n",
-      "\n",
-      "Data with input dtype int64, float64 were all converted to float64 by StandardScaler.\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([[-0.10339562, -0.27699559,  1.0374755 , ..., -0.57488231,\n",
-       "        -0.40987653, -0.24195428],\n",
-       "       [ 1.42301911,  1.36621476, -0.30115362, ..., -0.57488231,\n",
-       "        -0.40987653, -0.24195428],\n",
-       "       [-0.71396151, -0.27699559, -0.30115362, ..., -0.57488231,\n",
-       "        -0.40987653, -0.24195428],\n",
-       "       ...,\n",
-       "       [ 0.20188733, -1.92020594, -1.63978274, ..., -0.25037325,\n",
-       "        -0.40987653, -0.24195428],\n",
-       "       [ 0.20188733, -0.27699559, -0.30115362, ...,  0.72315395,\n",
-       "         1.44302617,  1.02036579],\n",
-       "       [-0.71396151, -0.27699559, -0.30115362, ..., -0.25037325,\n",
-       "         1.48308893,  4.38655262]])"
+       "(36169, 7)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
-    "X = StandardScaler().fit_transform(df_features)\n",
-    "X"
+    "X = StandardScaler().fit_transform(df[number_attributes])\n",
+    "X.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'x' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-42-0cab2f5c6690>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpca\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPCA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_components\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprincipalComponents\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpca\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m principalDf = pd.DataFrame(data = principalComponents\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.decomposition import PCA\n",
-    "\n",
-    "pca = PCA(n_components=2)\n",
-    "\n",
-    "principalComponents = pca.fit_transform(x)\n",
-    "\n",
-    "principalDf = pd.DataFrame(data = principalComponents\n",
-    "             , columns = ['principal component 1', 'principal component 2'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.991840653, 0.007058022, 0.001077994, 0.000012042, 0.00000744 ,\n",
-       "       0.000001222, 0.000001049, 0.00000086 , 0.000000494, 0.000000072,\n",
-       "       0.000000056, 0.000000033, 0.000000026, 0.000000022, 0.000000014,\n",
-       "       0.000000002])"
+       "array([0.214, 0.165, 0.157, 0.14 , 0.127, 0.117, 0.079])"
       ]
      },
      "metadata": {},
@@ -2616,12 +2571,183 @@
     {
      "data": {
       "text/plain": [
-       "array([576039.170264867,  48592.871318879,  18990.620352163,\n",
-       "         2007.163076695,   1577.681621136,    639.304896729,\n",
-       "          592.517318526,    536.401053432,    406.427742718,\n",
-       "          154.842936927,    136.373045619,    105.85449342 ,\n",
-       "           92.416110491,     85.439506734,     69.128720354,\n",
-       "           25.236607104])"
+       "array([232.72 , 204.546, 199.597, 187.952, 179.451, 172.418, 141.739])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.091949</td>\n",
+       "      <td>-1.391734</td>\n",
+       "      <td>1.027293</td>\n",
+       "      <td>-1.110688</td>\n",
+       "      <td>-0.751963</td>\n",
+       "      <td>0.310517</td>\n",
+       "      <td>0.164841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.053423</td>\n",
+       "      <td>-0.936481</td>\n",
+       "      <td>-0.355723</td>\n",
+       "      <td>-1.226742</td>\n",
+       "      <td>-0.228784</td>\n",
+       "      <td>0.273809</td>\n",
+       "      <td>0.233134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.045822</td>\n",
+       "      <td>-0.681600</td>\n",
+       "      <td>-1.070698</td>\n",
+       "      <td>-1.191226</td>\n",
+       "      <td>0.533372</td>\n",
+       "      <td>0.311367</td>\n",
+       "      <td>0.278222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.052351</td>\n",
+       "      <td>-0.938730</td>\n",
+       "      <td>0.184682</td>\n",
+       "      <td>-1.403381</td>\n",
+       "      <td>-0.012434</td>\n",
+       "      <td>0.243781</td>\n",
+       "      <td>0.221839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.062849</td>\n",
+       "      <td>-0.827127</td>\n",
+       "      <td>-0.895651</td>\n",
+       "      <td>-1.030682</td>\n",
+       "      <td>0.385187</td>\n",
+       "      <td>0.355993</td>\n",
+       "      <td>0.264209</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2         3         4         5         6\n",
+       "0  0.091949 -1.391734  1.027293 -1.110688 -0.751963  0.310517  0.164841\n",
+       "1  0.053423 -0.936481 -0.355723 -1.226742 -0.228784  0.273809  0.233134\n",
+       "2  0.045822 -0.681600 -1.070698 -1.191226  0.533372  0.311367  0.278222\n",
+       "3  0.052351 -0.938730  0.184682 -1.403381 -0.012434  0.243781  0.221839\n",
+       "4  0.062849 -0.827127 -0.895651 -1.030682  0.385187  0.355993  0.264209"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "pca = PCA(n_components=7)\n",
+    "\n",
+    "pca.fit(X)\n",
+    "\n",
+    "with np.printoptions(precision=3, suppress=True):\n",
+    "    display(pca.explained_variance_ratio_)  \n",
+    "    display(pca.singular_values_)  \n",
+    "\n",
+    "df_principal = pd.DataFrame(data = pca.transform(X), columns = range(7))\n",
+    "df_principal.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['age', 'balance', 'day', 'duration', 'campaign', 'pdays', 'previous'], dtype='object')"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[number_attributes].columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10661"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "11936"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[10470,    70],\n",
+       "       [ 1205,   191]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8931802949061662"
       ]
      },
      "metadata": {},
@@ -2629,16 +2755,19 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from sklearn.decomposition import PCA\n",
-    "X = df_features\n",
-    "pca = PCA(n_components=16)\n",
-    "pca.fit(X)\n",
-    "\n",
-    "\n",
-    "with np.printoptions(precision=9, suppress=True):\n",
-    "    display(pca.explained_variance_ratio_)  \n",
-    "    display(pca.singular_values_)  "
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "tree = DecisionTreeClassifier(min_impurity_decrease=0.001)\n",
+    "tree.fit(X_train, y_train)\n",
+    "prediction = tree.predict(X_test)\n",
+    "display(sum(prediction == y_test.squeeze()), len(prediction))\n",
+    "display(confusion_matrix(y_test, tree.predict(X_test)), sum(prediction == y_test.squeeze())/len(prediction))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on decision tree output, we can assert that the "
    ]
   },
   {
